  * Stop building el-torito i386 image, it's too big due to above busybox
    change.
  * i386 floppy is full due to above busybox change, moved half the network
    stuff the the net-drivers floppy, which now must be used for all network
    installs.
  * i386 bootfloppy is broken:
    mount: Couldn't setup loop device
    No idea why. Disabled i386 root and boot floppies. :-(

  [ Frans Pop ]
  * Integrate graphical installer.

 -- Frans Pop <fjp@debian.org>  Sun, 14 May 2006 07:56:01 +0200

debian-installer (20060304) unstable; urgency=low

  * Add build dependency on debian-archive-keyring so that the archive key can
    be checked. Closes: #355098.

 -- Frans Pop <fjp@debian.org>  Sat,  4 Mar 2006 01:56:43 +0100

debian-installer (20060302) unstable; urgency=low

  * Remove floppy-modules udeb again from powerpc root floppy as it seems this
    is not the cause of the problems in #345467.

 -- Frans Pop <fjp@debian.org>  Thu,  2 Mar 2006 12:59:32 +0100

debian-installer (20060218) unstable; urgency=low

  [ Steve Langasek ]
  * Add alpha to the list of archs build-depending on module-init-tools,
    now that we're building 2.6.

 -- Frans Pop <fjp@debian.org>  Fri, 17 Feb 2006 23:58:05 +0100

debian-installer (20060217) unstable; urgency=low

  * Add myself to uploaders.
  * Acknowledge bugs closed in previous version which was uploaded as NMU by
    mistake. Closes: #343674, #344854.
  * Add missing build dependency on apt-utils (needed for localudebs handling).

 -- Frans Pop <fjp@debian.org>  Fri, 17 Feb 2006 02:52:43 +0100

debian-installer (20060215) unstable; urgency=low

  [ dann frazier ]
  * Stop using mklibs-copy on ia64, now that #326103 is fixed.

  [ Joey Hess ]
  * Deal with dpkg-deb output change in udeb version extraction code.

  [ Frans Pop ]
  * Switch to 2.6.14 kernel for i386 and sparc64.
  * Run with udev by default (2.6 kernels only). This is now required for i386
    and should also work with 2.6.12 kernels for other arches.
