@@ -83,3 +83,7 @@ LSB_DISTRIB_RELEASE="3.1 (installer build $(BUILD_DATE))"
 # will probably later move to a udeb. If your archive uses some other key,
 # you can change this.
 KEYRING=/usr/share/apt/debian-archive.gpg
+
+# All images that include cdebconf should include symbols needed by these
+# plugins.
+EXTRAUDEBS=cdebconf-newt-entropy
