@@ -87,7 +87,7 @@ TEMP_POWERPC_INITRD = $(TEMP)/powerpc_initrd_tree
 
 DPKGDIR = $(TREE)/var/lib/dpkg
 
-EXTRADRIVERSDIR = $(TREE)/driver-tmp
-EXTRADRIVERSDPKGDIR = $(EXTRADRIVERSDIR)/var/lib/dpkg
+EXTRAUDEBSDIR = $(TREE)/extraudebs-tmp
+EXTRAUDEBSDPKGDIR = $(EXTRAUDEBSDIR)/var/lib/dpkg
 
 UDEB_LISTS = $(TEMP_UDEB_LIST)
