@@ -16,3 +16,4 @@ PRESEED_SUITE=
 # trial too, if it works ok we might do this for all busybox binaries
 # later.
 UPX_BINS=bin/busybox
+EXTRAUDEBS=
