@@ -9,3 +9,4 @@ KERNEL_CMDL = root=0200 load_ramdisk=1 prompt_ramdisk=1 devfs=mount \
 TEMP_INITRD = 
 # HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
 TYPE = bootfloppy
+EXTRAUDEBS=
