@@ -7,3 +7,4 @@ MANIFEST-BOOT = "boot floppy for network or CD installs (2.6)"
 
 # XXX: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
 TYPE = bootfloppy
+EXTRAUDEBS=
