@@ -5,3 +5,4 @@ TARGET = $(BOOT)
 
 MANIFEST-BOOT = "boot floppy for network or CD installs"
 TYPE = bootfloppy
+EXTRAUDEBS=
