@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# get-packages <type> <package> | <update> ...
+# get-packages <type> <package> ... | <update> ...
 #
 # Download deb or udeb package with the help of apt-get
 # type : deb | udeb
