@@ -125,6 +125,10 @@ debian-installer (20060307) UNRELEASED; urgency=low
   * i386 bootfloppy is broken:
     mount: Couldn't setup loop device
     No idea why. Disabled i386 root and boot floppies. :-(
+  * Add EXTRAUDEBS variable which can be used to pull in extra udebs for
+    library reduction that are not on boot images.
+  * Include cdebconf-newt-entropy in EXTRAUDEBS so that its symbols are in the
+    boot images; since it is linked into cdebconf which uses the reduced libc.
 
   [ Frans Pop ]
   * Integrate graphical installer.
